FEAT: 체크박스 기능 추가

--- a/static/css/vehicle/accident.css
+++ b/static/css/vehicle/accident.css
@@ -12,7 +12,7 @@
 /* 검색 관련 CSS: search- */
 .search-container {
     width: 100%;
-    height: 75rem;
+    height: 72.5rem;
 
     display: flex;
     flex-direction: column;
@@ -169,4 +169,158 @@
     border-radius: 17px;
 }
 
-/* 번호, 등급, 이름, 팀, 급여, 목표운행량, 매출액, KM, 시간, 유류비, 공차, 최초 고용일, 근무형태 */
+/* 팝업: pop-up */
+.pop-up-bg-container {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    position: absolute;
+    top:0;
+    left: 0;
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.pop-up-container {
+    width: 90%;
+    height: 90%;
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.pop-up-container .title-container {
+    width: 95%;
+    height: 8%;
+    background-color: white;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    border-bottom: 1px solid #838383;
+}
+
+.title-div #title-first-child {
+    font-weight: 400;
+    font-size: 1.8rem;
+}
+
+.title-div #title-second-child {
+    font-weight: 500;
+    font-size: 2.5rem;
+    margin-left: 0.5rem;
+}
+
+.pop-up-container .content-container {
+    width: 95%;
+    height: 85%;
+    background-color: antiquewhite;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.title-span {
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+.content-first-container {
+    width: 100%;
+    height: 80%;
+    background-color: aquamarine;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.accident-detail-info-div {
+    width: 32%;
+    height: 100%;
+    background-color: green;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.accident-detail-info-content-div {
+    width: 100%;
+    height: 100%;
+    background-color: #838383;
+}
+
+.accident-photo-div {
+    width: 30%;
+    height: 100%;
+    background-color: green;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.accident-photo-content-div {
+    width: 100%;
+    height: 100%;
+    background-color: #838383;
+}
+
+.accident-file-div {
+    width: 32%;
+    height: 100%;
+    background-color: green;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.accident-file-content-div {
+    width: 100%;
+    height: 100%;
+    background-color: #838383;
+}
+
+.content-second-container {
+    width: 100%;
+    height: 20%;
+    background-color: red;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.report-div {
+    width: 100%;
+    height: 90%;
+    background-color: #0069D9;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.accident-report-div {
+    width: 49%;
+    height: 100%;
+    background-color: #F1F1F1;
+
+    border-radius: 5px;
+}
+
+.driver-report-div {
+    width: 49%;
+    height: 100%;
+    background-color: white;
+}
