--- a/humanresource/templates/HR/member_efficiency.html
+++ b/humanresource/templates/HR/member_efficiency.html
@@ -20,9 +20,9 @@
         <div class="search-dispatch-path-box efficiency-div">
             <input type="text" placeholder="노선명" class="search-dispatch-path">
             <input type="date" class="search-dispatch-path-date">
-            <input type="button" value="오늘" onclick="setToday()" class="dispatch-path-today-button">
-            <input type="button" value="" onclick="setDayBefore()" class="day-before-button">
-            <input type="button" value="" onclick="setDayAfter()" class="day-after-button">
+            <input type="button" value="오늘" class="dispatch-path-today-button">
+            <input type="button" value="" class="day-before-button">
+            <input type="button" value="" class="day-after-button">
             <input type="button" value="검색" class="dispatch-path-search-button">
         </div>
 
@@ -103,7 +103,45 @@
                         <td class="table-list_body-tr_td">
                             <input tabindex="100" type="checkbox" class="amountCheck" name="member_id" value="{{member.id}}">
                         </td>
-                        <td class="table-list_body-tr_td">0</td> <!-- 번호 -->
+                        <td class="table-list_body-tr_td">1</td> <!-- 번호 -->
+                        <td class="table-list_body-tr_td">
+                            A</td> <!-- 등급 -->
+                        <td class="table-list_body-tr_td">이주성</td> <!-- 이름 -->
+                        <td class="table-list_body-tr_td">개발팀</td> <!-- 팀 -->
+                        <td class="table-list_body-tr_td">396만원</td> <!-- 급여 -->
+                        <td class="table-list_body-tr_td">
+                            7000KM <!-- 목표운행량 -->
+                        </td>
+                        <td class="table-list_body-tr_td">
+                            1500만원 <!-- 매출액 -->
+                        </td>
+                        <td class="table-list_body-tr_td">
+                            52 <!-- 운행수 -->
+                        </td>
+                        <td class="table-list_body-tr_td">
+                            7600KM <!-- KM -->
+                        </td>
+                        <td class="table-list_body-tr_td">
+                            628시간 <!-- 시간 -->
+                        </td>
+                        <td class="table-list_body-tr_td">
+                            8000 <!-- 유류비 -->
+                        </td>
+                        <td class="table-list_body-tr_td">
+                            0 <!-- 공차 -->
+                        </td>
+                        <td class="table-list_body-tr_td">
+                            2021. 11. 22 <!-- 최초 고용일 -->
+                        </td>
+                        <td class="table-list_body-tr_td">
+                            프리랜서 <!-- 근무형태 -->
+                        </td>
+                    </tr>
+                    <tr class="table-list_body-tr salaryList cursor">
+                        <td class="table-list_body-tr_td">
+                            <input tabindex="100" type="checkbox" class="amountCheck" name="member_id" value="{{member.id}}">
+                        </td>
+                        <td class="table-list_body-tr_td">2</td> <!-- 번호 -->
                         <td class="table-list_body-tr_td">
                             A</td> <!-- 등급 -->
                         <td class="table-list_body-tr_td">이주성</td> <!-- 이름 -->
@@ -152,7 +190,6 @@
 
 <!-- Script Block -->
 {% block script %}
-<script src="{% static 'js/hr/authority.js' %}"></script>
 <script src="{% static 'js/hr/member_efficiency.js' %}"></script>
 
 {% endblock %} 
