--- a/static/css/vehicle/efficiency.css
+++ b/static/css/vehicle/efficiency.css
@@ -11,7 +11,8 @@
 
 /* 운행량 관련 CSS: run-*/
 .run-container {
-    width: 23%;
+    display: none;
+    width: 0%;
     height: 75rem;
 
     display: flex;
@@ -354,7 +355,7 @@
 
 /* 검색 관련 CSS: search- */
 .search-container {
-    width: 75%;
+    width: 100%;
     height: 75rem;
 
     display: flex;
