--- a/vehicle/templates/vehicle/efficiency.html
+++ b/vehicle/templates/vehicle/efficiency.html
@@ -16,133 +16,6 @@
 <!-- Content Block -->
 {% block content %}
 <div class="all-container efficiency-div">
-    <div class="run-container efficiency-div"> <!-- 운행량 -->
-        <div class="total-run-box efficiency-div"> <!-- 총 운행량 box -->
-            <!-- 총 운행량 contents -->
-            <div class="total-run-title-box efficiency-div">
-                <p class="total-run-title-label">총 운행량 달성 비율</p>
-            </div>
-
-            <div class="total-run-content-box efficiency-div">
-                <div class="total-run-chart-box">
-                    <div class="total-run-pie-chart efficiency-div">
-                        <span class="total-run-pie-chart-center">
-                            76%
-                        </span>
-                    </div>
-
-                    <div class="total-run-chart-description-box efficiency-div">
-                        <div class="total-run-chart-description-input-box">
-                            <input class="total-run-chart-filter-button" type="button" value="월별">
-                        </div>
-                        <div class="total-run-chart-description-span-box">
-                            <div class="total-run-chart-description-span-box-child" id="total-target-driving-amount">
-                                <span>목표 운행량: 8000KM</span>
-                            </div>
-                            <div class="total-run-chart-description-span-box-child">
-                                <img class="total-run-description-image" src="/static/images/blueCircle.png" alt="">
-                                <span>달성: 평균 운행량 이상</span>
-                            </div>
-                            <div class="total-run-chart-description-span-box-child">
-                                <img class="total-run-description-image" src="/static/images/redCircle.png" alt="">
-                                <span>미달성: 평균 운행량 미만</span>
-                            </div>
-                            <div class="total-run-chart-description-span-box-child">
-                                <img class="total-run-description-image" src="/static/images/yellowCircle.png" alt="">
-                                <span>미배차: 사용하지 않는 차량</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="total-run-average-figure-box efficiency-div">
-                    <div class="total-run-average-figure-title-box efficiency-div">
-                        <p class="total-run-average-figure-title-label">평균 운행량</p>
-                    </div>
-                    <table class="run-table">
-                        <thead class="run-table-head">
-                            <tr class="run-table-head-tr">
-                                <td class="run-table-head-tr-td">운행수</td>
-                                <td class="run-table-head-tr-td">거리</td>
-                                <td class="run-table-head-tr-td">기름 사용량</td>
-                            </tr>
-                        </thead>
-                        <tbody class="run-table-body">
-                            <tr class="run-table-body-tr">
-                                <td class="run-table-body-tr-td">120</td>
-                                <td class="run-table-body-tr-td">5280KM</td>
-                                <td class="run-table-body-tr-td">800L</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="personal-run-box efficiency-div"> <!-- 개인 운행량 box -->
-            <!-- 개인 운행량 contents -->
-            <div class="personal-run-title-box efficiency-div">
-                <p class="personal-run-title-label">개인 운행량 달성 비율</p>
-            </div>
-
-            <div class="personal-run-content-box efficiency-div">
-                <div class="personal-run-chart-box efficiency-div">
-                    <div class="personal-run-pie-chart efficiency-div">
-                        <span class="personal-run-pie-chart-center">
-                            76%
-                        </span>
-                    </div>
-
-                    <div class="personal-run-chart-description-box efficiency-div">
-                        <div class="personal-run-chart-description-span-box">
-                            <div class="personal-run-chart-description-span-box-child"
-                                id="personal-target-driving-amount">
-                                <span>목표 운행량: 6400KM</span>
-                            </div>
-                            <div class="personal-run-chart-description-span-box-child">
-                                <img class="personal-run-description-image" src="/static/images/blueCircle.png" alt="">
-                                <span>달성: 현재 달성한 운행량</span>
-                            </div>
-                            <div class="personal-run-chart-description-span-box-child">
-                                <img class="personal-run-description-image" src="/static/images/yellowCircle.png"
-                                    alt="">
-                                <span>미달성: 앞으로 달성해야 할 운행량</span>
-                            </div>
-                        </div>
-                        <div class="personal-run-chart-description-name-box">
-                            <span class="personal-run-chart-description-name">차량번호 - 7786</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="personal-run-average-figure-box efficiency-div">
-                    <div class="personal-run-average-figure-title-box efficiency-div">
-                        <p class="personal-run-average-figure-title-label">평균 운행량</p>
-                    </div>
-                    <table class="run-table">
-                        <thead class="run-table-head">
-                            <tr class="run-table-head-tr">
-                                <td class="run-table-head-tr-td">운행수</td>
-                                <td class="run-table-head-tr-td">거리</td>
-                                <td class="run-table-head-tr-td">유류비</td>
-                            </tr>
-                        </thead>
-                        <tbody class="run-table-body">
-                            <tr class="run-table-body-tr">
-                                <td class="run-table-body-tr-td">120</td>
-                                <td class="run-table-body-tr-td">5280KM</td>
-                                <td class="run-table-body-tr-td">800L</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-
     <div class="search-container efficiency-div"> <!-- 검색 box-->
         <div class="search-dispatch-path-box efficiency-div">
             <input type="text" placeholder="노선명" class="search-dispatch-path">
@@ -279,3 +152,129 @@
 <script src="{% static 'js/vehicle/efficiency.js' %}"></script>
 
 {% endblock %}
+
+
+<!-- <div class="run-container efficiency-div"> 
+    <div class="total-run-box efficiency-div"> 
+        
+        <div class="total-run-title-box efficiency-div">
+            <p class="total-run-title-label">총 운행량 달성 비율</p>
+        </div>
+
+        <div class="total-run-content-box efficiency-div">
+            <div class="total-run-chart-box">
+                <div class="total-run-pie-chart efficiency-div">
+                    <span class="total-run-pie-chart-center">
+                        76%
+                    </span>
+                </div>
+
+                <div class="total-run-chart-description-box efficiency-div">
+                    <div class="total-run-chart-description-input-box">
+                        <input class="total-run-chart-filter-button" type="button" value="월별">
+                    </div>
+                    <div class="total-run-chart-description-span-box">
+                        <div class="total-run-chart-description-span-box-child" id="total-target-driving-amount">
+                            <span>목표 운행량: 8000KM</span>
+                        </div>
+                        <div class="total-run-chart-description-span-box-child">
+                            <img class="total-run-description-image" src="/static/images/blueCircle.png" alt="">
+                            <span>달성: 평균 운행량 이상</span>
+                        </div>
+                        <div class="total-run-chart-description-span-box-child">
+                            <img class="total-run-description-image" src="/static/images/redCircle.png" alt="">
+                            <span>미달성: 평균 운행량 미만</span>
+                        </div>
+                        <div class="total-run-chart-description-span-box-child">
+                            <img class="total-run-description-image" src="/static/images/yellowCircle.png" alt="">
+                            <span>미배차: 사용하지 않는 차량</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="total-run-average-figure-box efficiency-div">
+                <div class="total-run-average-figure-title-box efficiency-div">
+                    <p class="total-run-average-figure-title-label">평균 운행량</p>
+                </div>
+                <table class="run-table">
+                    <thead class="run-table-head">
+                        <tr class="run-table-head-tr">
+                            <td class="run-table-head-tr-td">운행수</td>
+                            <td class="run-table-head-tr-td">거리</td>
+                            <td class="run-table-head-tr-td">기름 사용량</td>
+                        </tr>
+                    </thead>
+                    <tbody class="run-table-body">
+                        <tr class="run-table-body-tr">
+                            <td class="run-table-body-tr-td">120</td>
+                            <td class="run-table-body-tr-td">5280KM</td>
+                            <td class="run-table-body-tr-td">800L</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="personal-run-box efficiency-div">
+        
+        <div class="personal-run-title-box efficiency-div">
+            <p class="personal-run-title-label">개인 운행량 달성 비율</p>
+        </div>
+
+        <div class="personal-run-content-box efficiency-div">
+            <div class="personal-run-chart-box efficiency-div">
+                <div class="personal-run-pie-chart efficiency-div">
+                    <span class="personal-run-pie-chart-center">
+                        76%
+                    </span>
+                </div>
+
+                <div class="personal-run-chart-description-box efficiency-div">
+                    <div class="personal-run-chart-description-span-box">
+                        <div class="personal-run-chart-description-span-box-child" id="personal-target-driving-amount">
+                            <span>목표 운행량: 6400KM</span>
+                        </div>
+                        <div class="personal-run-chart-description-span-box-child">
+                            <img class="personal-run-description-image" src="/static/images/blueCircle.png" alt="">
+                            <span>달성: 현재 달성한 운행량</span>
+                        </div>
+                        <div class="personal-run-chart-description-span-box-child">
+                            <img class="personal-run-description-image" src="/static/images/yellowCircle.png" alt="">
+                            <span>미달성: 앞으로 달성해야 할 운행량</span>
+                        </div>
+                    </div>
+                    <div class="personal-run-chart-description-name-box">
+                        <span class="personal-run-chart-description-name">차량번호 - 7786</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="personal-run-average-figure-box efficiency-div">
+                <div class="personal-run-average-figure-title-box efficiency-div">
+                    <p class="personal-run-average-figure-title-label">평균 운행량</p>
+                </div>
+                <table class="run-table">
+                    <thead class="run-table-head">
+                        <tr class="run-table-head-tr">
+                            <td class="run-table-head-tr-td">운행수</td>
+                            <td class="run-table-head-tr-td">거리</td>
+                            <td class="run-table-head-tr-td">유류비</td>
+                        </tr>
+                    </thead>
+                    <tbody class="run-table-body">
+                        <tr class="run-table-body-tr">
+                            <td class="run-table-body-tr-td">120</td>
+                            <td class="run-table-body-tr-td">5280KM</td>
+                            <td class="run-table-body-tr-td">800L</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+
+</div> -->
